--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
   <header class="hero">
-    <h1>Olá, eu sou Inês 👋</h1>
-    <p>Front-End Developer com foco em UX, performance e acessibilidade.</p>
-    <a href="#projects" class="btn">Ver Projetos</a>
-  </header>
+  <img src="your-photo.jpg" alt="Foto de Inês Lemos Ribeiro" />
+  <h1>Olá, eu sou Inês 👋</h1>
+  <p>Front-End Developer com foco em UX, performance e acessibilidade.</p>
+  <a href="#projects" class="btn">Ver Projetos</a>
+</header>
+
 
   <section id="about" class="section">
     <h2>Sobre Mim</h2>
