--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
-  <header class="hero">
-  <img src="your-photo.jpg" alt="Foto de Inês Lemos Ribeiro" />
-  <h1>Olá, eu sou Inês 👋</h1>
-  <p>Front-End Developer com foco em UX, performance e acessibilidade.</p>
-  <a href="#projects" class="btn">Ver Projetos</a>
+ <header class="hero">
+  <img src="ines.jpg" alt="Foto de Inês Lemos Ribeiro" />
+  <div class="hero-content">
+    <h1>Olá, eu sou Inês 👋</h1>
+    <p>Front-End Developer com foco em UX, performance e acessibilidade.</p>
+    <a href="#projects" class="btn">Ver Projetos</a>
+  </div>
 </header>
 
 
