--- a/index.html
+++ b/index.html
@@ -1,58 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Inês Lemos Ribeiro | Front-End Developer</title>
+
+  <!-- Google Fonts Poppins + Open Sans -->
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@600&display=swap" rel="stylesheet" />
+
+  <!-- Your CSS -->
   <link rel="stylesheet" href="./styles.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
-<header class="hero">
-  <img src="ines.jpg" alt="Foto de Inês Lemos Ribeiro" />
-  <div class="hero-content">
-    <h1>Olá, eu sou Inês 👋</h1>
-    <p>Front-End Developer com foco em UX, performance e acessibilidade.</p>
-    <div class="hero-buttons">
-      <a href="#projects" class="btn">Ver Projetos</a>
-      <a href="cv.pdf" download class="btn">Download CV</a>
+  <header class="hero">
+    <img src="your-photo.jpg" alt="Foto de Inês Lemos Ribeiro" />
+    <div class="hero-content">
+      <h1>Olá, eu sou Inês 👋</h1>
+      <p>Front-End Developer com foco em UX, performance e acessibilidade.</p>
+      <div class="hero-buttons">
+        <a href="#projects" class="btn">Ver Projetos</a>
+        <a href="/path-to-your-cv.pdf" class="btn" download>Download CV</a>
+      </div>
     </div>
-  </div>
-</header>
-
-
+  </header>
 
   <section id="about" class="section">
     <h2>Sobre Mim</h2>
-    <p>Sou licenciada em Novas Tecnologias da Comunicação pela Universidade de Aveiro. Trabalho como front-end developer desde 2018, com foco em HTML, CSS, JavaScript e boas práticas de UX. Também tenho experiência com WordPress, mas estou focada em desenvolvimento front-end moderno.</p>
+    <p>
+      Sou licenciada em Novas Tecnologias da Comunicação pela Universidade de Aveiro. Trabalho como front-end developer desde 2018, com foco em HTML, CSS, JavaScript e boas práticas de UX. Também tenho experiência com WordPress, mas estou focada em desenvolvimento front-end moderno.
+    </p>
   </section>
 
   <section id="projects" class="section">
     <h2>Projetos</h2>
     <div class="project">
-      <h3>Nome do Projeto</h3>
+      <h3>Nome do Projeto 1</h3>
       <p>Descrição curta do projeto. Tecnologias usadas, desafios resolvidos, etc.</p>
       <a href="#">Ver código</a> | <a href="#">Demo</a>
     </div>
-    <!-- Repete para outros projetos -->
+    <div class="project">
+      <h3>Nome do Projeto 2</h3>
+      <p>Descrição curta do projeto. Tecnologias usadas, desafios resolvidos, etc.</p>
+      <a href="#">Ver código</a> | <a href="#">Demo</a>
+    </div>
+    <!-- Adicione mais projetos aqui -->
   </section>
 
   <section id="contact" class="section">
     <h2>Contacto</h2>
-    <p>Pode enviar-me um email para <a href="mailto:inessribeiro.dev@gmail.com">inessribeiro.dev@gmail.com</a> ou contactar-me via <a href="https://www.linkedin.com/in/inessribeiro/" target="_blank">LinkedIn</a>.</p>
+    <p>
+      Pode enviar-me um email para
+      <a href="mailto:inessribeiro.dev@gmail.com">inessribeiro.dev@gmail.com</a> ou contactar-me via
+      <a href="https://www.linkedin.com/in/inessribeiro/" target="_blank" rel="noopener noreferrer">LinkedIn</a>.
+    </p>
+    <a href="mailto:inessribeiro.dev@gmail.com" class="btn">Enviar Email</a>
   </section>
 
   <footer>
     <p>&copy; 2025 Inês Lemos Ribeiro</p>
   </footer>
-  <script>
-  document.addEventListener('DOMContentLoaded', () => {
-    const projects = document.querySelectorAll('.project');
-    projects.forEach((project, i) => {
-      project.style.animation = `slideFadeInLeft 0.7s forwards`;
-      project.style.animationDelay = `${i * 0.3 + 0.5}s`; // stagger delay
-    });
-  });
-</script>
 </body>
 </html>
