--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en-GB">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -10,50 +10,77 @@
 
   <!-- Your CSS -->
   <link rel="stylesheet" href="./styles.css" />
+  <!-- Optional: Add Font Awesome CDN for icons -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-papbOjURBqE5Ph4lZscEYqv1YpYYH+Pz79oxJUV9EpV4WbI+0UQRcULRC8VVr/5bKw9LmYqevIlm+1eM9av4Kg=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
 </head>
 <body>
   <header class="hero">
-    <img src="your-photo.jpg" alt="Foto de Inês Lemos Ribeiro" />
+    <img src="your-photo.jpg" alt="Photo of Inês Lemos Ribeiro" />
     <div class="hero-content">
-      <h1>Olá, eu sou Inês 👋</h1>
-      <p>Front-End Developer com foco em UX, performance e acessibilidade.</p>
+      <h1>Hello, I’m Inês 👋</h1>
+      <p>Front-End Developer focusing on UX, performance and accessibility.</p>
       <div class="hero-buttons">
-        <a href="#projects" class="btn">Ver Projetos</a>
+        <a href="#projects" class="btn">View Projects</a>
         <a href="/path-to-your-cv.pdf" class="btn" download>Download CV</a>
       </div>
     </div>
   </header>
 
   <section id="about" class="section">
-    <h2>Sobre Mim</h2>
+    <h2>About Me</h2>
     <p>
-      Sou licenciada em Novas Tecnologias da Comunicação pela Universidade de Aveiro. Trabalho como front-end developer desde 2018, com foco em HTML, CSS, JavaScript e boas práticas de UX. Também tenho experiência com WordPress, mas estou focada em desenvolvimento front-end moderno.
+      I hold a degree in New Communication Technologies from the University of Aveiro. I have been working as a front-end developer since 2018, specialising in HTML, CSS, JavaScript and UX best practices. I also have experience with WordPress, but I am currently focused on modern front-end development.
     </p>
+    <p>I am based in Portugal.</p>
   </section>
 
   <section id="projects" class="section">
-    <h2>Projetos</h2>
+    <h2>Projects</h2>
     <div class="project">
-      <h3>Nome do Projeto 1</h3>
-      <p>Descrição curta do projeto. Tecnologias usadas, desafios resolvidos, etc.</p>
-      <a href="#">Ver código</a> | <a href="#">Demo</a>
+      <h3>Project Name 1</h3>
+      <p>Brief project description. Technologies used, challenges solved, etc.</p>
+      <a href="#">View code</a> | <a href="#">Demo</a>
     </div>
     <div class="project">
-      <h3>Nome do Projeto 2</h3>
-      <p>Descrição curta do projeto. Tecnologias usadas, desafios resolvidos, etc.</p>
-      <a href="#">Ver código</a> | <a href="#">Demo</a>
+      <h3>Project Name 2</h3>
+      <p>Brief project description. Technologies used, challenges solved, etc.</p>
+      <a href="#">View code</a> | <a href="#">Demo</a>
     </div>
-    <!-- Adicione mais projetos aqui -->
+    <!-- Add more projects here -->
   </section>
 
   <section id="contact" class="section">
-    <h2>Contacto</h2>
+    <h2>Contact</h2>
     <p>
-      Pode enviar-me um email para
-      <a href="mailto:inessribeiro.dev@gmail.com">inessribeiro.dev@gmail.com</a> ou contactar-me via
+      You can email me at
+      <a href="mailto:inessribeiro.dev@gmail.com">inessribeiro.dev@gmail.com</a> or get in touch via
       <a href="https://www.linkedin.com/in/inessribeiro/" target="_blank" rel="noopener noreferrer">LinkedIn</a>.
     </p>
-    <a href="mailto:inessribeiro.dev@gmail.com" class="btn">Enviar Email</a>
+    <a href="mailto:inessribeiro.dev@gmail.com" class="btn">Send Email</a>
+  </section>
+
+  <section id="social-media" class="section">
+    <h2>Social Media</h2>
+    <div class="social-links">
+      <a href="https://twitter.com/yourhandle" target="_blank" rel="noopener noreferrer" aria-label="Twitter">
+        <i class="fab fa-twitter fa-2x"></i>
+      </a>
+      <a href="https://github.com/inesssRibeiro" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+        <i class="fab fa-github fa-2x"></i>
+      </a>
+      <a href="https://www.instagram.com/yourhandle" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+        <i class="fab fa-instagram fa-2x"></i>
+      </a>
+      <a href="https://www.facebook.com/yourhandle" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
+        <i class="fab fa-facebook fa-2x"></i>
+      </a>
+    </div>
   </section>
 
   <footer>
