--- a/index.html
+++ b/index.html
@@ -21,67 +21,79 @@
 </head>
 <body>
   <header class="hero">
-    <img src="your-photo.jpg" alt="Photo of Inês Lemos Ribeiro" />
-    <div class="hero-content">
-      <h1>Hello, I’m Inês 👋</h1>
-      <p>Front-End Developer focusing on UX, performance and accessibility.</p>
-      <div class="hero-buttons">
-        <a href="#projects" class="btn">View Projects</a>
-        <a href="/path-to-your-cv.pdf" class="btn" download>Download CV</a>
+    <div class="container">
+      <img src="your-photo.jpg" alt="Portrait photo of Inês Lemos Ribeiro, front-end developer" loading="lazy" />
+      <div class="hero-content">
+        <h1>Hello, I’m Inês 👋</h1>
+        <p>Front-End Developer focusing on UX, performance and accessibility.</p>
+        <div class="hero-buttons">
+          <a href="#projects" class="btn">View Projects</a>
+          <a href="/path-to-your-cv.pdf" class="btn" download>Download CV</a>
+        </div>
       </div>
     </div>
   </header>
 
-  <section id="about" class="section">
-    <h2>About Me</h2>
-    <p>
-      I hold a degree in New Communication Technologies from the University of Aveiro. I have been working as a front-end developer since 2018, specialising in HTML, CSS, JavaScript and UX best practices. I also have experience with WordPress, but I am currently focused on modern front-end development.
-    </p>
-    <p>I am based in Portugal.</p>
-  </section>
+  <main>
+    <section id="about" class="section">
+      <div class="container">
+        <h2>About Me</h2>
+        <p>
+          I hold a degree in New Communication Technologies from the University of Aveiro. I have been working as a front-end developer since 2018, specialising in HTML, CSS, JavaScript and UX best practices. I also have experience with WordPress, but I am currently focused on modern front-end development.
+        </p>
+        <p>I am based in Portugal.</p>
+      </div>
+    </section>
 
-  <section id="projects" class="section">
-    <h2>Projects</h2>
-    <div class="project">
-      <h3>Project Name 1</h3>
-      <p>Brief project description. Technologies used, challenges solved, etc.</p>
-      <a href="#">View code</a> | <a href="#">Demo</a>
-    </div>
-    <div class="project">
-      <h3>Project Name 2</h3>
-      <p>Brief project description. Technologies used, challenges solved, etc.</p>
-      <a href="#">View code</a> | <a href="#">Demo</a>
-    </div>
-    <!-- Add more projects here -->
-  </section>
+    <section id="projects" class="section">
+      <div class="container">
+        <h2>Projects</h2>
+        <div class="project">
+          <h3>Project Name 1</h3>
+          <p>Brief project description. Technologies used, challenges solved, etc.</p>
+          <a href="#">View code</a> | <a href="#">Demo</a>
+        </div>
+        <div class="project">
+          <h3>Project Name 2</h3>
+          <p>Brief project description. Technologies used, challenges solved, etc.</p>
+          <a href="#">View code</a> | <a href="#">Demo</a>
+        </div>
+        <!-- Add more projects here -->
+      </div>
+    </section>
 
-  <section id="contact" class="section">
-    <h2>Contact</h2>
-    <p>
-      You can email me at
-      <a href="mailto:inessribeiro.dev@gmail.com">inessribeiro.dev@gmail.com</a> or get in touch via
-      <a href="https://www.linkedin.com/in/inessribeiro/" target="_blank" rel="noopener noreferrer">LinkedIn</a>.
-    </p>
-    <a href="mailto:inessribeiro.dev@gmail.com" class="btn">Send Email</a>
-  </section>
+    <section id="contact" class="section">
+      <div class="container">
+        <h2>Contact</h2>
+        <p>
+          You can email me at
+          <a href="mailto:inessribeiro.dev@gmail.com">inessribeiro.dev@gmail.com</a> or get in touch via
+          <a href="https://www.linkedin.com/in/inessribeiro/" target="_blank" rel="noopener noreferrer">LinkedIn</a>.
+        </p>
+        <a href="mailto:inessribeiro.dev@gmail.com" class="btn">Send Email</a>
+      </div>
+    </section>
 
-  <section id="social-media" class="section">
-    <h2>Social Media</h2>
-    <div class="social-links">
-      <a href="https://twitter.com/yourhandle" target="_blank" rel="noopener noreferrer" aria-label="Twitter">
-        <i class="fab fa-twitter fa-2x"></i>
-      </a>
-      <a href="https://github.com/inesssRibeiro" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
-        <i class="fab fa-github fa-2x"></i>
-      </a>
-      <a href="https://www.instagram.com/yourhandle" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
-        <i class="fab fa-instagram fa-2x"></i>
-      </a>
-      <a href="https://www.facebook.com/yourhandle" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
-        <i class="fab fa-facebook fa-2x"></i>
-      </a>
-    </div>
-  </section>
+    <section id="social-media" class="section">
+      <div class="container">
+        <h2>Social Media</h2>
+        <div class="social-links">
+          <a href="https://twitter.com/yourhandle" target="_blank" rel="noopener noreferrer" aria-label="Twitter">
+            <i class="fab fa-twitter fa-2x"></i>
+          </a>
+          <a href="https://github.com/inesssRibeiro" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+            <i class="fab fa-github fa-2x"></i>
+          </a>
+          <a href="https://www.instagram.com/yourhandle" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+            <i class="fab fa-instagram fa-2x"></i>
+          </a>
+          <a href="https://www.facebook.com/yourhandle" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
+            <i class="fab fa-facebook fa-2x"></i>
+          </a>
+        </div>
+      </div>
+    </section>
+  </main>
 
   <footer>
     <p>&copy; 2025 Inês Lemos Ribeiro</p>
