--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Inês Lemos Ribeiro | Front-End Developer</title>
 
-  <!-- Google Fonts Poppins + Open Sans -->
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@600&display=swap" rel="stylesheet" />
 
-  <!-- Your CSS -->
+  <!-- CSS -->
   <link rel="stylesheet" href="./styles.css" />
-  <!-- Optional: Add Font Awesome CDN for icons -->
+
+  <!-- Font Awesome -->
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -21,8 +22,8 @@
 </head>
 <body>
   <header class="hero">
-    <div class="container">
-      <img src="your-photo.jpg" alt="Portrait photo of Inês Lemos Ribeiro, front-end developer" loading="lazy" />
+    <div class="container hero-inner">
+      <img src="your-photo.jpg" alt="Photo of Inês Lemos Ribeiro" />
       <div class="hero-content">
         <h1>Hello, I’m Inês 👋</h1>
         <p>Front-End Developer focusing on UX, performance and accessibility.</p>
@@ -34,69 +35,68 @@
     </div>
   </header>
 
-  <main>
-    <section id="about" class="section">
-      <div class="container">
-        <h2>About Me</h2>
-        <p>
-          I hold a degree in New Communication Technologies from the University of Aveiro. I have been working as a front-end developer since 2018, specialising in HTML, CSS, JavaScript and UX best practices. I also have experience with WordPress, but I am currently focused on modern front-end development.
-        </p>
-        <p>I am based in Portugal.</p>
-      </div>
-    </section>
+  <section id="about" class="section">
+    <div class="container">
+      <h2>About Me</h2>
+      <p>
+        I hold a degree in New Communication Technologies from the University of Aveiro. I have been working as a front-end developer since 2018, specialising in HTML, CSS, JavaScript and UX best practices. I also have experience with WordPress, but I am currently focused on modern front-end development.
+      </p>
+      <p>I am based in Portugal.</p>
+    </div>
+  </section>
 
-    <section id="projects" class="section">
-      <div class="container">
-        <h2>Projects</h2>
-        <div class="project">
-          <h3>Project Name 1</h3>
-          <p>Brief project description. Technologies used, challenges solved, etc.</p>
-          <a href="#">View code</a> | <a href="#">Demo</a>
-        </div>
-        <div class="project">
-          <h3>Project Name 2</h3>
-          <p>Brief project description. Technologies used, challenges solved, etc.</p>
-          <a href="#">View code</a> | <a href="#">Demo</a>
-        </div>
-        <!-- Add more projects here -->
+  <section id="projects" class="section">
+    <div class="container">
+      <h2>Projects</h2>
+      <div class="project">
+        <h3>Project Name 1</h3>
+        <p>Brief project description. Technologies used, challenges solved, etc.</p>
+        <a href="#">View code</a> | <a href="#">Demo</a>
       </div>
-    </section>
+      <div class="project">
+        <h3>Project Name 2</h3>
+        <p>Brief project description. Technologies used, challenges solved, etc.</p>
+        <a href="#">View code</a> | <a href="#">Demo</a>
+      </div>
+    </div>
+  </section>
 
-    <section id="contact" class="section">
-      <div class="container">
-        <h2>Contact</h2>
-        <p>
-          You can email me at
-          <a href="mailto:inessribeiro.dev@gmail.com">inessribeiro.dev@gmail.com</a> or get in touch via
-          <a href="https://www.linkedin.com/in/inessribeiro/" target="_blank" rel="noopener noreferrer">LinkedIn</a>.
-        </p>
-        <a href="mailto:inessribeiro.dev@gmail.com" class="btn">Send Email</a>
-      </div>
-    </section>
+  <section id="contact" class="section">
+    <div class="container">
+      <h2>Contact</h2>
+      <p>
+        You can email me at
+        <a href="mailto:inessribeiro.dev@gmail.com">inessribeiro.dev@gmail.com</a> or get in touch via
+        <a href="https://www.linkedin.com/in/inessribeiro/" target="_blank" rel="noopener noreferrer">LinkedIn</a>.
+      </p>
+      <a href="mailto:inessribeiro.dev@gmail.com" class="btn">Send Email</a>
+    </div>
+  </section>
 
-    <section id="social-media" class="section">
-      <div class="container">
-        <h2>Social Media</h2>
-        <div class="social-links">
-          <a href="https://twitter.com/yourhandle" target="_blank" rel="noopener noreferrer" aria-label="Twitter">
-            <i class="fab fa-twitter fa-2x"></i>
-          </a>
-          <a href="https://github.com/inesssRibeiro" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
-            <i class="fab fa-github fa-2x"></i>
-          </a>
-          <a href="https://www.instagram.com/yourhandle" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
-            <i class="fab fa-instagram fa-2x"></i>
-          </a>
-          <a href="https://www.facebook.com/yourhandle" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
-            <i class="fab fa-facebook fa-2x"></i>
-          </a>
-        </div>
+  <section id="social-media" class="section">
+    <div class="container">
+      <h2>Social Media</h2>
+      <div class="social-links">
+        <a href="https://twitter.com/yourhandle" target="_blank" rel="noopener noreferrer" aria-label="Twitter">
+          <i class="fab fa-twitter fa-2x"></i>
+        </a>
+        <a href="https://github.com/inesssRibeiro" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+          <i class="fab fa-github fa-2x"></i>
+        </a>
+        <a href="https://www.instagram.com/yourhandle" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+          <i class="fab fa-instagram fa-2x"></i>
+        </a>
+        <a href="https://www.facebook.com/yourhandle" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
+          <i class="fab fa-facebook fa-2x"></i>
+        </a>
       </div>
-    </section>
-  </main>
+    </div>
+  </section>
 
   <footer>
-    <p>&copy; 2025 Inês Lemos Ribeiro</p>
+    <div class="container">
+      <p>&copy; 2025 Inês Lemos Ribeiro</p>
+    </div>
   </footer>
 </body>
 </html>
