--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <a href="mailto:inessribeiro.dev@gmail.com">inessribeiro.dev@gmail.com</a> or get in touch via
         <a href="https://www.linkedin.com/in/inessribeiro/" target="_blank" rel="noopener noreferrer">LinkedIn</a>.
       </p>
-      <a href="mailto:inessribeiro.dev@gmail.com" class="btn">Send Email</a>
+      <a href="mailto:inessribeiro.dev@gmail.com" class="btn" id="btn_contact">Send Email</a>
     </section>
 
     <section id="social-media" class="section card">
