--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
           <h2>Let's Talk?</h2>
           <hr
         /></span>
-        <form class="my-form">
+        <form name="contact" method="POST" data-netlify="true" class="my-form">
           <div class="left-fields">
             <label for="name">Name</label><br />
             <input
